# paperjet

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yaml
paperjet/: Cargo.toml  README.md
paperjet-cli/: Cargo.toml  README.md
paperjet-cli/src/cli/: args.rs  common.rs  mod.rs  snapshot.rs
paperjet-cli/src/cli/commands/: display.rs
paperjet-cli/src/cli/commands/print/: cmd.rs  duplex.rs  mod.rs
paperjet-cli/src/cli/pdf/: mod.rs
paperjet/src/print/: api.rs  error.rs  mod.rs  options.rs
paperjet/src/print/unix/: api.rs  dest.rs  job.rs  mod.rs  native.rs  options.rs
paperjet/src/print/util/: mod.rs
paperjet/src/print/windows/: api.rs  mod.rs  native.rs  printer.rs  str.rs
paperjet/tests/: safety.rs  unix.rs
paperjet/tests/trybuild/: dest_lifetimes.rs  dest_lifetimes.stderr
paperjet/tests/utils/: mod.rs  unixutils.rs
src/: args.rs  main.rs
src/cli/: args.rs  common.rs  display.rs  error.rs  list.rs  mod.rs  print.rs  snapshot.rs
src/cli/commands/: display.rs  list.rs  mod.rs  print.rs
src/cli/commands/print/: cmd.rs  duplex.rs  mod.rs  pdf.rs  transform.rs
src/cli/pdf/: slice.rs  split.rs
src/print/: api.rs  cups.rs  error.rs  mod.rs  native.rs  options.rs
src/print/unix/: cups.rs  dest.rs  job.rs  jobs.rs  mod.rs  native.rs  options.rs
src/print/util/: mod.rs
tests/: int.rs  unix.rs  utils.rs
tests/utils/: mod.rs  unixutils.rs
