[package]
name = "printrs"
version = "0.1.0"
edition = "2024"

[lib]
name = "printrs"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "printrs"
path = "src/main.rs"

[build-dependencies]
bindgen = "0.72.0"

[dependencies]
clap = { version = "4.5.41", features = ["color", "derive"] }
colored = "3.0.0"
